--- a/.github/workflows/AutoSubmit.yml
+++ b/.github/workflows/AutoSubmit.yml
@@ -17,4 +17,4 @@ jobs:
         run: |
           sudo apt install curl -y
           sudo apt install jq -y
-          sudo bash submit.sh
+          sudo bash ./submit.sh
