--- a/.github/workflows/AutoSubmit.yml
+++ b/.github/workflows/AutoSubmit.yml
@@ -17,8 +17,4 @@ jobs:
         run: |
           sudo apt install curl -y
           sudo apt install jq -y
-          ls -a
-          dirs
-          cd ..
-          ls -a
-          sudo bash submit.sh
+          sudo bash ./submit.sh
