--- a/.github/workflows/AutoSubmit.yml
+++ b/.github/workflows/AutoSubmit.yml
@@ -2,7 +2,7 @@ name: AutoSubmit
 
 on:
   schedule:
-    - cron: '0 6,12,18 * * *'
+    - cron: '* 6,12,18 * * *'
   push:
     branches: [ main ]
   pull_request:
