完善自动提交流程

--- a/.github/workflows/AutoSubmit.yml
+++ b/.github/workflows/AutoSubmit.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
       - name: Auto Submit
         run: |
           sudo apt install curl -y
